Regression: Click Dragging on Socket Labels does not register #97386

Closed
opened 2022-04-16 19:29:59 +02:00 by Erindale · 20 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-15 21:55, hash: dc5ae10692
Worked: Definitely 3.1. (I think I noticed the error only in the last 3-4 days)
Caused by 484a914647

Short description of error
Click dragging nodes in the node editor does not register when clicking over a socket label.
In geo nodes. Doesn't seem to happen in Shaders.

Exact steps for others to reproduce the error

  • Add a new node tree.
  • Add several nodes.
  • Click and drag on different nodes that are not currently active.
  • Sometimes the click won't drag the node (specifically on sockets)

or

  • Add new GN tree
  • select group input node

Click & drag somewhere around socket label of Group output node

2022-04-16 18-27-05.mp4

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-15 21:55, hash: `dc5ae10692` Worked: Definitely 3.1. (I think I noticed the error only in the last 3-4 days) Caused by 484a914647 **Short description of error** Click dragging nodes in the node editor does not register when clicking over a socket label. In geo nodes. Doesn't seem to happen in Shaders. **Exact steps for others to reproduce the error** - Add a new node tree. - Add several nodes. - Click and drag on different nodes that are not currently active. - Sometimes the click won't drag the node (specifically on sockets) or - Add new GN tree - select group input node # Click & drag somewhere around socket label of Group output node [2022-04-16 18-27-05.mp4](https://archive.blender.org/developer/F13004289/2022-04-16_18-27-05.mp4)

#98045 was marked as duplicate of this issue

#98045 was marked as duplicate of this issue

#97861 was marked as duplicate of this issue

#97861 was marked as duplicate of this issue

#97824 was marked as duplicate of this issue

#97824 was marked as duplicate of this issue
Author

Added subscriber: @Erindale

Added subscriber: @Erindale

Added subscriber: @erik85

Added subscriber: @erik85

edit: removed inaccurate comment.

edit: removed inaccurate comment.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Click dragging nodes in the node editor does not register when clicking over a socket label.

Thanks for the report. I can confirm this. Will find the responsible commit

D14499 looks related to this.

I don't think both are related. Tweak tool is not necessary here for replicating the issue.

> Click dragging nodes in the node editor does not register when clicking over a socket label. Thanks for the report. I can confirm this. Will find the responsible commit > [D14499](https://archive.blender.org/developer/D14499) looks related to this. I don't think both are related. Tweak tool is not necessary here for replicating the issue.
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Member

Selection got affected by this commit {484a9146479e05946d291e9886cdf3febca6d05d}
@LukasStockner hi, can you take a look?

Selection got affected by this commit {484a9146479e05946d291e9886cdf3febca6d05d} @LukasStockner hi, can you take a look?
Pratik Borhade changed title from Click Dragging on Socket Labels does not register to Regression: Click Dragging on Socket Labels does not register 2022-04-18 15:09:42 +02:00
Lukas Stockner self-assigned this 2022-04-21 22:49:34 +02:00
Member

Added subscriber: @higgsas

Added subscriber: @higgsas

Added subscriber: @ramonkarlos

Added subscriber: @ramonkarlos

same problem in 3.2 and 3.3

same problem in 3.2 and 3.3

Removed subscriber: @higgsas

Removed subscriber: @higgsas

Added subscriber: @Vyach

Added subscriber: @Vyach

Only sockets on the left block dradding, so active zone (green) looks approximately like this
58830124.png

Only sockets on the left block dradding, so active zone (green) looks approximately like this ![58830124.png](https://archive.blender.org/developer/F13066240/58830124.png)

Added subscribers: @Leo-Luther, @OmarEmaraDev

Added subscribers: @Leo-Luther, @OmarEmaraDev

This issue was referenced by 05b56d55e8

This issue was referenced by 05b56d55e8578c79080083cb4177a8846f82af14

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97386
No description provided.