Fix T97386: Node socket labels swallow click/drag events

Regression caused by [0] which made `ui_but_is_interactive` consider
label buttons with tool-tips to be interactive. This prevented
the clicks to pass through to the nodes for selecting/dragging.

Resolve this by allowing buttons to be activated for the purpose
of showing tool-tips but otherwise considering them disabled
(as if the UI_BUT_DISABLED is set when handling events).

[0]: 484a9146479e05946d291e9886cdf3febca6d05d

Reviewed By: Severin

Ref D14932